fix card hierarchy bug